@@ -1,0 +1,4 @@
+CC=gcc-min
+all : tisplit timerge
+clean :
+	rm -f tisplit timerge *.o core
